[package]
name = "docker-exporter"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = "symbols"
panic = "abort"

[dependencies]
chrono = { version = "0.4.24", default-features = false }
ctrlc = { version = "3.2.5", features = ["termination"] }
futures = "0.3.28"
hyper = "0.14.25"
hyperlocal = { version = "0.8.0", default-features = false, features = [ "client" ] }
log = "0.4.17"
once_cell = "1.17.1"
prometheus = { version = "0.13.3", default-features = false }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
simplelog = "0.12.1"
tiny_http = "0.12.0"
tokio = { version = "1.27.0", features = ["macros"] }
