[package]
name = "docker-exporter"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = "symbols"
panic = "abort"

[dependencies]
chrono = { version = "0.4.24", default-features = false }
ctrlc = { version = "3.2.5", features = ["termination"] }
futures = { version = "0.3.28", default-features = false }
hyper = { version = "0.14.25", default-features = false }
hyperlocal = { version = "0.8.0", default-features = false, features = [ "client" ] }
log = { version = "0.4.17", default-features = false }
once_cell = { version = "1.17.1", default-features = false }
prometheus = { version = "0.13.3", default-features = false }
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.95", default-features = false, features = ["std"] }
simplelog = { version = "0.12.1", default-features = false }
tiny_http = { version = "0.12.0", default-features = false }
tokio = { version = "1.27.0", default-features = false, features = ["macros"] }
